service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi
  namespace: nifi
  labels:
    app: nifi
spec:
  selector:
    app: nifi
  ports:
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: web-secure
    port: 8443
    targetPort: 8443
    protocol: TCP
  - name: site-to-site
    port: 10000
    targetPort: 10000
    protocol: TCP
  - name: load-balance
    port: 6007
    targetPort: 6007
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-headless
  namespace: nifi
  labels:
    app: nifi
spec:
  selector:
    app: nifi
  ports:
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: web-secure
    port: 8443
    targetPort: 8443
    protocol: TCP
  - name: site-to-site
    port: 10000
    targetPort: 10000
    protocol: TCP
  - name: load-balance
    port: 6007
    targetPort: 6007
    protocol: TCP
  clusterIP: None
